more sass spacing fixes

--- a/client/sass/placesDetails.sass
+++ b/client/sass/placesDetails.sass
@@ -35,6 +35,10 @@
   .activated
     border: 0
     background: $dmBlue2
+  .item
+    background-color: $dmMidGray
+      // color: $dmLightGray !important
+    height: 15vw
   .item img
     border-radius: 1vw
   .miles
